--- a/QLVT_PT_DevExpressPJ/QLVT_PT_DevExpressPJ.csproj
+++ b/QLVT_PT_DevExpressPJ/QLVT_PT_DevExpressPJ.csproj
@@ -155,6 +155,12 @@
     <Compile Include="subforms\subFormCTPN.Designer.cs">
       <DependentUpon>subFormCTPN.cs</DependentUpon>
     </Compile>
+    <Compile Include="subforms\subFormCTPX.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="subforms\subFormCTPX.Designer.cs">
+      <DependentUpon>subFormCTPX.cs</DependentUpon>
+    </Compile>
     <Compile Include="subforms\subFormDDH.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,6 +211,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="subforms\subFormCTPN.resx">
       <DependentUpon>subFormCTPN.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="subforms\subFormCTPX.resx">
+      <DependentUpon>subFormCTPX.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="subforms\subFormDDH.resx">
       <DependentUpon>subFormDDH.cs</DependentUpon>
