--- a/QLVT_PT_DevExpressPJ/QLVT_PT_DevExpressPJ.csproj
+++ b/QLVT_PT_DevExpressPJ/QLVT_PT_DevExpressPJ.csproj
@@ -78,6 +78,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="reports\DsNhanVienRP.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="reports\DsNhanVienRP.Designer.cs">
+      <DependentUpon>DsNhanVienRP.cs</DependentUpon>
+    </Compile>
     <Compile Include="formDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,11 +120,17 @@
     <Compile Include="formVatTu.Designer.cs">
       <DependentUpon>formVatTu.cs</DependentUpon>
     </Compile>
-    <Compile Include="PhieuNhapRP.cs">
+    <Compile Include="reports\DsVatTuRP.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="PhieuNhapRP.Designer.cs">
-      <DependentUpon>PhieuNhapRP.cs</DependentUpon>
+    <Compile Include="reports\DsVatTuRP.Designer.cs">
+      <DependentUpon>DsVatTuRP.cs</DependentUpon>
+    </Compile>
+    <Compile Include="reports\PhieuLapTrongNamTheoLoaiRP.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="reports\PhieuLapTrongNamTheoLoaiRP.Designer.cs">
+      <DependentUpon>PhieuLapTrongNamTheoLoaiRP.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -142,6 +154,18 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>QLVTPhMDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="reports\subformsRP\subFormChonCN_RP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reports\subformsRP\subFormChonCN_RP.Designer.cs">
+      <DependentUpon>subFormChonCN_RP.cs</DependentUpon>
+    </Compile>
+    <Compile Include="reports\subformsRP\subFormPhieuLap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reports\subformsRP\subFormPhieuLap.Designer.cs">
+      <DependentUpon>subFormPhieuLap.cs</DependentUpon>
     </Compile>
     <Compile Include="subforms\subFormCTDDH.cs">
       <SubType>Form</SubType>
@@ -179,6 +203,9 @@
     <Compile Include="subforms\subFormPX.Designer.cs">
       <DependentUpon>subFormPX.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="reports\DsNhanVienRP.resx">
+      <DependentUpon>DsNhanVienRP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="formDangNhap.resx">
       <DependentUpon>formDangNhap.cs</DependentUpon>
     </EmbeddedResource>
@@ -197,14 +224,23 @@
     <EmbeddedResource Include="formVatTu.resx">
       <DependentUpon>formVatTu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PhieuNhapRP.resx">
-      <DependentUpon>PhieuNhapRP.cs</DependentUpon>
+    <EmbeddedResource Include="reports\DsVatTuRP.resx">
+      <DependentUpon>DsVatTuRP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reports\PhieuLapTrongNamTheoLoaiRP.resx">
+      <DependentUpon>PhieuLapTrongNamTheoLoaiRP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reports\subformsRP\subFormChonCN_RP.resx">
+      <DependentUpon>subFormChonCN_RP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reports\subformsRP\subFormPhieuLap.resx">
+      <DependentUpon>subFormPhieuLap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="subforms\subFormCTDDH.resx">
       <DependentUpon>subFormCTDDH.cs</DependentUpon>
