--- a/QLVT_PT_DevExpressPJ/QLVT_PT_DevExpressPJ.csproj
+++ b/QLVT_PT_DevExpressPJ/QLVT_PT_DevExpressPJ.csproj
@@ -78,6 +78,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="formTaoTaiKhoan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formTaoTaiKhoan.Designer.cs">
+      <DependentUpon>formTaoTaiKhoan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QLVTDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLVTDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="reports\DsDDHChuaCoPnRP.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -160,11 +171,6 @@
     <Compile Include="QLVTDataSet.cs">
       <DependentUpon>QLVTDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="QLVTDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QLVTDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="QLVTPhMDataSet.cs">
       <DependentUpon>QLVTPhMDataSet.xsd</DependentUpon>
     </Compile>
@@ -233,6 +239,9 @@
     <Compile Include="subforms\subFormPX.Designer.cs">
       <DependentUpon>subFormPX.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="formTaoTaiKhoan.resx">
+      <DependentUpon>formTaoTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="reports\DsDDHChuaCoPnRP.resx">
       <DependentUpon>DsDDHChuaCoPnRP.cs</DependentUpon>
     </EmbeddedResource>
@@ -321,6 +330,7 @@
     <None Include="QLVTDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>QLVTDataSet1.Designer.cs</LastGenOutput>
     </None>
     <None Include="QLVTDataSet.xss">
       <DependentUpon>QLVTDataSet.xsd</DependentUpon>
